# wardn-ai

./: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  README.md  package-lock.json  package.json
wardn/backend/: .env.example  Dockerfile  pyproject.toml
wardn/backend/app/: __init__.py  main.py  manage.py  openapi.py
wardn/backend/app/api/: authorization.py  http_errors.py  request_id.py  router.py
wardn/backend/app/commands/: __init__.py  registry.py
wardn/backend/app/core/: config.py  logging.py  outbound_http.py  pagination.py  schemas.py  security.py
wardn/backend/app/db/: advisory_locks.py  base.py  domain_types.py  errors.py  mixins.py  session.py
wardn/backend/app/db/migrations/: env.py  script.py.mako
wardn/backend/app/db/migrations/versions/: 202606210001_initial_users.py  202606210002_mcp_registry.py  202606210003_mcp_server_installations.py  202606210004_mcp_description_text.py  202606210005_mcp_install_artifacts.py  202606210006_mcp_install_secret_config.py  202606210007_mcp_tool_schema_cache.py  202606210008_mcp_runtime_sessions.py  202606210009_mcp_installation_config_names.py  202606210010_organizations_workspaces.py  202606210011_mcp_registry_organizations.py  202606210012_mcp_catalog_sources.py  202606210013_runtime_config_fingerprint.py  202606210014_runtime_events.py  202606210015_installation_scoped_tool_schemas.py  202606230001_api_token_gateway_scopes.py  202606230002_agents_llm_foundation.py  202606230003_llm_credential_oauth.py  202606230004_llm_provider_oauth_states.py  202606230005_split_openai_chatgpt_provider.py  202606230006_drop_llm_oauth_states.py  202606230007_agent_server_tool_assignments.py  202606290001_secret_stores.py  (+28 more)
wardn/backend/app/modules/agents/: approvals.py  chat_orchestrator.py  conversations.py  exceptions.py  mappers.py  models.py  provider_clients.py  repository.py  router.py  schemas.py  service.py  tool_execution.py  types.py
wardn/backend/app/modules/guardrails/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
wardn/backend/app/modules/health/: router.py  schemas.py  service.py
wardn/backend/app/modules/limits/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
wardn/backend/app/modules/llm_providers/: chatgpt_oauth.py  commands.py  exceptions.py  models.py  provider_clients.py  repository.py  router.py  schemas.py  service.py
wardn/backend/app/modules/mcp_gateway/: client.py  oauth.py  repository.py  router.py  scope.py  service.py
wardn/backend/app/modules/mcp_registry/: catalog_jobs.py  catalog_service.py  commands.py  config_service.py  exceptions.py  installation_jobs.py  installation_service.py  installer.py  job_commands.py  job_handlers.py  job_repository.py  job_service.py  job_worker.py  models.py  repository.py  router.py  schemas.py  scope_service.py  service.py  source_metadata.py  source_metadata_rate_limit.py  tool_repository.py  tool_service.py
wardn/backend/app/modules/mcp_runtime/: adapter_client.py  adapter_contract.py  commands.py  exceptions.py  manager.py  models.py  provider.py  reaper.py  repository.py  router.py  schemas.py  service.py  shutdown.py  warmup.py
wardn/backend/app/modules/observability/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
wardn/backend/app/modules/organizations/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
wardn/backend/app/modules/secrets/: __init__.py  cleanup_worker.py  commands.py  exceptions.py  managed.py  managed_repository.py  models.py  provider.py  repository.py  router.py  schemas.py  service.py
wardn/backend/app/modules/users/: __init__.py  auth_router.py  commands.py  dependencies.py  exceptions.py  models.py  oidc.py  repository.py  router.py  schemas.py  service.py
wardn/backend/tests/: database_fakes.py  test_agents_repository.py  test_agents_service.py  test_api_authorization.py  test_api_schemas.py  test_config.py  test_db_errors.py  test_db_session.py  test_domain_model_constraints.py  test_guardrails_service.py  test_health.py  test_health_service.py  test_http_errors.py  test_limits_repository.py  test_limits_service.py  test_llm_provider_commands.py  test_llm_providers_service.py  test_main.py  test_mcp_catalog_jobs.py  test_mcp_gateway.py  test_mcp_gateway_client.py  test_mcp_gateway_repository.py  test_mcp_installation_jobs.py  test_mcp_job_repository.py  test_mcp_job_worker.py  test_mcp_operation_jobs.py  test_mcp_registry_commands.py  test_mcp_registry_installer.py  test_mcp_registry_repository.py  test_mcp_registry_schemas.py  test_mcp_registry_service.py  test_mcp_runtime_adapter_contract.py  test_mcp_runtime_commands.py  test_mcp_runtime_kubernetes.py  test_mcp_runtime_manager.py  test_mcp_runtime_reaper.py  test_mcp_runtime_repository.py  test_mcp_runtime_router.py  test_mcp_runtime_service.py  test_mcp_runtime_warmup.py  (+17 more)
wardn/backend/tests/integration/: conftest.py  test_postgres.py
wardn/runtime-adapter/: Dockerfile  README.md  pyproject.toml
wardn/runtime-adapter/adapter/: app.py  config.py  constants.py  main.py  redaction.py  stdio_bridge.py
wardn/runtime-adapter/tests/: test_adapter_app.py
wardn/runtime-adapter/tests/fixtures/: fake_mcp_server.py
(+277 files in other folders)
