[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "wardn-api"
version = "0.0.1"
description = "Wardn AI backend API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "greenlet>=3.1.0",
  "httpx>=0.28.0",
  "kubernetes>=31.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "pwdlib[argon2]>=0.2.1",
  "python-json-logger>=2.0.7",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.32.0",
  "websockets>=16.0",
  "joserfc>=1.7.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=2.2.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.modules.mcp_registry" = ["fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["app/db/mixins.py", "app/modules/*/models.py"]
exclude = ["app/db/migrations/versions"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
